--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <table cellspacing = "20">
         <tr>
-            <td><img src="/images/circle-cropped.png" alt="mi conejo"  width="200" height="200" ></td>
+            <td><img src="./images/circle-cropped.png" alt="mi conejo"  width="200" height="200" ></td>
             <td>
                 <h1>Xareni Wang Chen</h1>
                 <p><em>Física Biomédica <strong>Ciencias Biológicas</strong></em></p>
