--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ღXareni's Personal Webღ</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 
 </head>
 
@@ -12,7 +12,7 @@
 
     <table cellspacing = "20">
         <tr>
-            <td><img class="snake circular"  src="/images/circle-cropped.png" alt="mi conejo"  width="200" height="200" ></td>
+            <td><img class="snake circular"  src="./images/circle-cropped.png" alt="mi conejo"  width="200" height="200" ></td>
             <td>
                 <h1 id="heading">Xareni Wang Chen</h1>
                 <p><em>Física Biomédica <strong>Ciencias Biológicas</strong></em></p>
